--- a/КиноОнлайн/dev/html/all.html
+++ b/КиноОнлайн/dev/html/all.html
@@ -137,81 +137,78 @@
         </div>
       </div>
       <div id="threeBlock">
-              <div class="container">
-                <div class="row">
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h2 class="title">Новинки кино:</h2>
-                  </div><span class="hide">0</span><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
-                              <div class="title">Глубоководный горизонт</div>
-                              <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
-                                <div class="hoverBlock">
-                                  <div class="playIco"></div>
-                                </div>
-                              </div>
-                              <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
-                              <div class="title">Глубоководный горизонт</div>
-                              <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
-                                <div class="hoverBlock">
-                                  <div class="playIco"></div>
-                                </div>
-                              </div>
-                              <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
-                              <div class="title">Глубоководный горизонт</div>
-                              <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
-                                <div class="hoverBlock">
-                                  <div class="playIco"></div>
-                                </div>
-                              </div>
-                              <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a>
-                  <hr><span class="hide">1</span><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
-                              <div class="title">Глубоководный горизонт</div>
-                              <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
-                                <div class="hoverBlock">
-                                  <div class="playIco"></div>
-                                </div>
-                              </div>
-                              <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
-                              <div class="title">Глубоководный горизонт</div>
-                              <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
-                                <div class="hoverBlock">
-                                  <div class="playIco"></div>
-                                </div>
-                              </div>
-                              <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
-                              <div class="title">Глубоководный горизонт</div>
-                              <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
-                                <div class="hoverBlock">
-                                  <div class="playIco"></div>
-                                </div>
-                              </div>
-                              <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a>
-                  <hr><span class="hide">2</span><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
-                              <div class="title">Глубоководный горизонт</div>
-                              <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
-                                <div class="hoverBlock">
-                                  <div class="playIco"></div>
-                                </div>
-                              </div>
-                              <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
-                              <div class="title">Глубоководный горизонт</div>
-                              <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
-                                <div class="hoverBlock">
-                                  <div class="playIco"></div>
-                                </div>
-                              </div>
-                              <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
-                              <div class="title">Глубоководный горизонт</div>
-                              <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
-                                <div class="hoverBlock">
-                                  <div class="playIco"></div>
-                                </div>
-                              </div>
-                              <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a>
-                  <div class="showAllFilms">
-                    <h2><a href="#">Смотреть все »</a></h2>
-                  </div>
-                </div>
-              </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+              <h2 class="title">Новинки кино:</h2>
+            </div><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
+                          <div class="title">Глубоководный горизонт</div>
+                          <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
+                            <div class="hoverBlock">
+                              <div class="playIco"></div>
+                            </div>
+                          </div>
+                          <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
+                          <div class="title">Глубоководный горизонт</div>
+                          <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
+                            <div class="hoverBlock">
+                              <div class="playIco"></div>
+                            </div>
+                          </div>
+                          <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
+                          <div class="title">Глубоководный горизонт</div>
+                          <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
+                            <div class="hoverBlock">
+                              <div class="playIco"></div>
+                            </div>
+                          </div>
+                          <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a>
+            <hr><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
+                          <div class="title">Глубоководный горизонт</div>
+                          <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
+                            <div class="hoverBlock">
+                              <div class="playIco"></div>
+                            </div>
+                          </div>
+                          <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
+                          <div class="title">Глубоководный горизонт</div>
+                          <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
+                            <div class="hoverBlock">
+                              <div class="playIco"></div>
+                            </div>
+                          </div>
+                          <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
+                          <div class="title">Глубоководный горизонт</div>
+                          <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
+                            <div class="hoverBlock">
+                              <div class="playIco"></div>
+                            </div>
+                          </div>
+                          <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a>
+            <hr><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
+                          <div class="title">Глубоководный горизонт</div>
+                          <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
+                            <div class="hoverBlock">
+                              <div class="playIco"></div>
+                            </div>
+                          </div>
+                          <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
+                          <div class="title">Глубоководный горизонт</div>
+                          <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
+                            <div class="hoverBlock">
+                              <div class="playIco"></div>
+                            </div>
+                          </div>
+                          <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a><a href="#" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 newFilm">
+                          <div class="title">Глубоководный горизонт</div>
+                          <div class="imgBlock"><img src="http://kino.yaljournal.ru/image.php?id=a3JleXNlcg==|aHFkZWZhdWx0LmpwZw==|MTAwMDAx|290|158">
+                            <div class="hoverBlock">
+                              <div class="playIco"></div>
+                            </div>
+                          </div>
+                          <div class="text">Лето 1945 года. До конца Второй мировой оставались считанные недели… Крейсер ВМС США «Индианополис» доставил на американскую военную ...</div></a>
+          </div>
+        </div>
       </div>
       <div id="sixBlock">
         <div class="container">
@@ -285,8 +282,8 @@
       <footer>
         <div class="container">
           <div class="row">
-            <h2 class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-left">Кино Онлайн © 2013-2015</h2>
-            <h2 class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-right hidden-xs">
+            <h2 class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-left">Кино Онлайн © 2013-2015</h2>
+            <h2 class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-right">
               <div class="counter"></div>
             </h2>
           </div>
