--- a/КиноОнлайн/dev/html/viewer.html
+++ b/КиноОнлайн/dev/html/viewer.html
@@ -192,9 +192,9 @@
                             <h2>Париж: Город мёртвых</h2>
                             <h3>2014, США, ужасы</h3>
                             <button>Смотреть<i aria-hidden="true" class="fa fa-play"></i></button>
-                            <h2><span class="bold">Режисёр:</span>Джон Эрик Даудл</h2>
-                            <h2><span class="bold">В ролях:</span>Пердита Викс, Бен Фельдман, Эдвин Ходж</h2>
-                            <h3>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h3>
+                            <h2>Режисёр: Джон Эрик Даудл</h2>
+                            <h2>В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж</h2>
+                            <h2>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h2>
                           </div><img src="http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234">
                           <div class="filmTitle">Глубоководный горизонт</div></a><a href="#" class="col-xs-6 col-sm-6 col-md-2 col-lg-2 text-center">
                           <div class="hoverInfoTipR">
@@ -202,9 +202,9 @@
                             <h2>Париж: Город мёртвых</h2>
                             <h3>2014, США, ужасы</h3>
                             <button>Смотреть<i aria-hidden="true" class="fa fa-play"></i></button>
-                            <h2><span class="bold">Режисёр:</span>Джон Эрик Даудл</h2>
-                            <h2><span class="bold">В ролях:</span>Пердита Викс, Бен Фельдман, Эдвин Ходж</h2>
-                            <h3>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h3>
+                            <h2>Режисёр: Джон Эрик Даудл</h2>
+                            <h2>В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж</h2>
+                            <h2>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h2>
                           </div><img src="http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234">
                           <div class="filmTitle">Глубоководный горизонт</div></a><a href="#" class="col-xs-6 col-sm-6 col-md-2 col-lg-2 text-center">
                           <div class="hoverInfoTipB">
@@ -214,7 +214,7 @@
                             <button>Смотреть<i aria-hidden="true" class="fa fa-play"></i></button>
                             <h2>Режисёр: Джон Эрик Даудл</h2>
                             <h2>В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж</h2>
-                            <h3>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h3>
+                            <h2>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h2>
                           </div><img src="http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234">
                           <div class="filmTitle">Глубоководный горизонт</div></a><a href="#" class="col-xs-6 col-sm-6 col-md-2 col-lg-2 text-center">
                           <div class="hoverInfoTipB">
@@ -224,7 +224,7 @@
                             <button>Смотреть<i aria-hidden="true" class="fa fa-play"></i></button>
                             <h2>Режисёр: Джон Эрик Даудл</h2>
                             <h2>В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж</h2>
-                            <h3>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h3>
+                            <h2>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h2>
                           </div><img src="http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234">
                           <div class="filmTitle">Глубоководный горизонт</div></a><a href="#" class="col-xs-6 col-sm-6 col-md-2 col-lg-2 text-center">
                           <div class="hoverInfoTipL">
@@ -234,7 +234,7 @@
                             <button>Смотреть<i aria-hidden="true" class="fa fa-play"></i></button>
                             <h2>Режисёр: Джон Эрик Даудл</h2>
                             <h2>В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж</h2>
-                            <h3>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h3>
+                            <h2>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h2>
                           </div><img src="http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234">
                           <div class="filmTitle">Глубоководный горизонт</div></a><a href="#" class="col-xs-6 col-sm-6 col-md-2 col-lg-2 text-center">
                           <div class="hoverInfoTipL">
@@ -244,7 +244,7 @@
                             <button>Смотреть<i aria-hidden="true" class="fa fa-play"></i></button>
                             <h2>Режисёр: Джон Эрик Даудл</h2>
                             <h2>В ролях: Пердита Викс, Бен Фельдман, Эдвин Ходж</h2>
-                            <h3>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h3>
+                            <h2>Величие Эйфелевой башни и роскошь бутиков, ароматы изысканной кухни и краски Елисейских полей — это лишь саван, под которым скрывается настоящий Париж. Здесь, в бесконечных катакомбах живут истинные владыки этого мира. Заблудшая душа, добро пожаловать в Город мертвых</h2>
                           </div><img src="http://kino.yaljournal.ru/image.php?id=cGVzY2hlcmE=|cG9zdGVyLmpwZw==|MTAwMDAx|163|234">
                           <div class="filmTitle">Глубоководный горизонт</div></a>
           </div>
@@ -253,8 +253,7 @@
       <footer>
         <div class="container">
           <div class="row">
-            <h2 class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-left">Кино Онлайн © 2013-2015
-            </h2>
+            <h2 class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-left">Кино Онлайн © 2013-2015</h2>
             <h2 class="col-xs-12 col-sm-6 col-md-6 col-lg-6 text-right hidden-xs">
               <div class="counter"></div>
             </h2>
